--- a/package.json
+++ b/package.json
@@ -132,6 +132,7 @@
     "webpack-target-electron-renderer": "^0.3.0"
   },
   "dependencies": {
+    "d3": "^3.5.6",
     "electron-debug": "^0.5.1",
     "font-awesome": "^4.4.0",
     "history": "~1.13.0",
@@ -139,6 +140,7 @@
     "react-dom": "^0.14.2",
     "react-redux": "^4.0.0",
     "react-router": "^1.0.0",
+    "react-stockcharts": "^0.3.0",
     "redux": "^3.0.4",
     "redux-promise": "^0.5.0",
     "redux-thunk": "^1.0.0"
